# Cognita

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  WEEK1_COMPLETION_REPORT.md  WEEK2_COMPLETION_REPORT.md  WEEK3_COMPLETION_REPORT.md  WEEK4_COMPLETION_REPORT.md  docker-compose.prod.yml  docker-compose.yml  idea.md  pitch.md
.github/workflows/: ci.yml  deploy.yml  pr-check.yml
backend/: Dockerfile  generate_token.py  pyproject.toml  seed_demo.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_data.py
backend/app/: __init__.py  celery_worker.py  config.py  database.py  deps.py  main.py  setup_real.py  sync_github.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: action.py  analyst.py  collector.py  insight.py
backend/app/api/v1/: actions.py  agent_runs.py  auth.py  developers.py  insights.py  orgs.py  repos.py  webhooks.py
backend/app/core/: __init__.py  rate_limit.py  security.py  telemetry.py
backend/app/models/: __init__.py  agent_action.py  agent_run.py  audit_log.py  base.py  commit_event.py  developer.py  insight.py  jira_template.py  org.py  pr_event.py  repo.py  tenant.py  tenant_settings.py  user.py
backend/app/providers/: base.py  github.py
backend/app/schemas/: action.py  agent_run.py  developer.py  insight.py  org.py  tenant.py
backend/app/services/: email.py  github.py  ingest.py  jira.py  notification.py  slack.py
backend/scripts/: setup_real.py  sync_github.py
backend/tests/: conftest.py  test_multi_tenancy.py
backend/tests/test_agents/: test_analyst.py  test_collector.py
backend/tests/test_api/: test_actions.py  test_agent_runs.py  test_health.py  test_webhooks.py
backend/tests/test_models/: test_schema.py
backend/tests/test_services/: test_email.py  test_github.py  test_jira.py  test_slack.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Card.tsx  Sidebar.tsx  TopNav.tsx  UI.tsx
frontend/src/pages/: Actions.tsx  AgentRuns.tsx  Dashboard.tsx  Developers.tsx  Insights.tsx
infra/: docker-compose.yml  otel-collector-config.yml  prometheus.yml
infra/nginx/: nginx.conf
scripts/: seed_demo.py  setup_vps.sh
