[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devpulse"
version = "0.1.0"
description = "AI-powered developer productivity intelligence platform"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DevPulse", email = "dev@devpulse.io" }]

dependencies = [
    # Web framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",

    # Database
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",

    # Redis & async
    "redis==5.0.1",
    "aioredis==2.0.1",

    # Job queue
    "celery==5.3.4",
    "flower==2.0.1",

    # HTTP client
    "httpx==0.25.2",

    # Retry logic
    "tenacity==8.2.3",

    # Security & crypto
    "cryptography==41.0.7",
    "python-jose[cryptography]==3.3.0",
    "pydantic[email]>=2.7.4",
    "pydantic-settings>=2.2.0",

    # Agents
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.8",
    "anthropic==0.7.1",

    # Observability
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-otlp==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-instrumentation-sqlalchemy==0.42b0",
    "prometheus-client==0.19.0",

    # Env
    "python-dotenv==1.0.0",

    # Fix for missing pkg_resources in Python 3.12
    "setuptools<70.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "respx==0.20.2",
    "ruff==0.1.8",
    "black==23.12.0",
    "mypy==1.7.1",
    "types-redis==4.6.0.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "venv", "alembic"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.venv
    | venv
    | alembic
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
exclude = ["alembic"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

